update work to access at work tomorrow

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "PRO MERN STACK EXERCISES",
   "main": "index.js",
   "scripts": {
+    "compile": "babel src --presets react,env --out-dir static",
+    "watch": "babel src --presets react,env --out-dir static --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +23,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1"
   }
 }
